Update project structure and remove obsolete test file
Updated various .csproj files to include new folders for better organization:
- API.csproj: Added Swagger, DependencyInjection, and Controllers.
- Application.csproj: Added Commands, DTOs, Interfaces, Services, and Queries.
- Infrastructure.csproj: Added Configurations, Integrations, Persistence, and Repositories.
- Domain.csproj: Added Aggregates, Interfaces, Services, and ValueObjects.
- Tests.csproj: Added folders for Acceptance, Integration, and Unit tests.

Removed Test1.cs, which contained initialization, cleanup, and a test method.

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -12,4 +12,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
