Refactor project and test structure
Updated Domain.csproj to include new folders: Interfaces, Services, ValueObjects, and Aggregates for better organization.

Removed Test1.cs which contained a test class with initialization, cleanup, and a single test method.

Updated Tests.csproj to include new folders: Acceptance, Integration, Unit\API, Unit\Infrastructure, Unit\Application, and Unit\Domain for better test project structure.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -12,4 +12,13 @@
     <TestingPlatformShowTestsFailure>true</TestingPlatformShowTestsFailure>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Acceptance\" />
+    <Folder Include="Integration\" />
+    <Folder Include="Unit\API\" />
+    <Folder Include="Unit\Infrastructure\" />
+    <Folder Include="Unit\Application\" />
+    <Folder Include="Unit\Domain\" />
+  </ItemGroup>
+
 </Project>
