--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -12,4 +12,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+    <Folder Include="ValueObjects\" />
+    <Folder Include="Aggregates\" />
+  </ItemGroup>
+
 </Project>
